[gd_scene load_steps=3 format=3 uid="uid://esmj4uolvxnp"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_bydvp"]
[ext_resource type="Texture2D" uid="uid://dfhww88cgwlnx" path="res://icon.png" id="2_hk77b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 507.0
offset_top = 322.0
offset_right = 547.0
offset_bottom = 362.0
script = ExtResource("1_bydvp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Icon" type="Sprite2D" parent="MarginContainer"]
position = Vector2(35, -61)
scale = Vector2(0.0962963, 0.107931)
texture = ExtResource("2_hk77b")

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
